# PySPIDER

./: .gitignore  MANIFEST.in  PySPIDER_overview.md  README.md  process_library_terms_parallel.py  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
PySPIDER-SR/commons/: TInvPower.py  sparse_reg_bf.py
PySPIDER-SR/continuous/: NS_test.ipynb
PySPIDER-SR/discrete/: gaussian_potential_test-Copy2.ipynb
PySPIDER_SR/commons/: identify_models.py  synthetic_test.ipynb
PySPIDER_SR/continuous/: NS_Brandon_data.ipynb  library.py
commons/: TInvPower.py  identify_models.py  library.py  process_library_terms.py  sparse_reg_bf.py  sr_utils.py  synthetic_test.ipynb  z3base.py
continuous/: NS_Brandon_data.ipynb  NS_test.ipynb  library.py  process_library_terms.py
discrete/: gaussian_potential_test-Copy1.ipynb  gaussian_potential_test-Copy2.ipynb  gaussian_potential_test-Copy3.ipynb  gaussian_potential_test-oneweight.ipynb  gaussian_potential_test.ipynb  library.py  process_library_terms.py
src/PySPIDER/commons/: TInvPower.py  __init__.py  greedy_rounding_test.py  identify_models.py  library.py  process_library_terms.py  sparse_reg.py  sparse_reg_bf.py  sr_utils.py  synthetic_test.ipynb  utils.py  weight.py  z3base.py
src/PySPIDER/continuous/: NS_Brandon_data.ipynb  NS_test.ipynb  __init__.py  library.py  process_library_terms.py
src/PySPIDER/continuous/data/: plot_vorticity.ipynb
src/PySPIDER/discrete/: __init__.py  coarse_grain_utils.py  convolution.py  discrete_utils.py  gaussian_potential_test-Copy2.ipynb  gaussian_potential_test.ipynb  interp.py  library.py  lj_test.ipynb  process_library_terms.py  read_LAMMPS.py  test_time_smoothing.py
src/PySPIDER/discrete/Matt/: gaussian_potential_old.ipynb
tutorials/: 01_Continuous.ipynb  02_Discrete.ipynb
