[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pySPIDER-SR"
version = "2.0"

authors = [
  { name="Daniel Gurevich (sibirica)", email="nerpa12@gmail.com" },
]
dependencies = [
  "z3-solver",
  "findiff",
  "numba-kdtree",
  "numpy",
  "scipy >= 1.6",
]
description = "PySPIDER: a Python implementation of the SPIDER framework for data-driven equivariant modeling of continuous and discrete systems"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sibirica/PySPIDER"
Issues = "https://github.com/sibirica/PySPIDER/issues"

[tool.setuptools]
py-modules = [commons, continuous, discrete]