[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySPIDER_SR"
version = "2.1.0"
authors = [
  { name="Daniel Gurevich", email="nerpa12@gmail.com" },
]
dependencies = [
  "z3-solver",
  "findiff",
  "numba-kdtree",
  "numpy",
  "scipy >= 1.6",
]
description = "A Python implementation of the SPIDER framework for data-driven equivariant modeling of continuous and discrete systems"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sibirica/PySPIDER"
Issues = "https://github.com/sibirica/PySPIDER/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = []